--- a/ClientLogic/ClientLogic.csproj
+++ b/ClientLogic/ClientLogic.csproj
@@ -1,14 +1,11 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\ClientLogic\ClientLogic.csproj" />
     <ProjectReference Include="..\TCPClientLibrary\TCPClientLibrary.csproj" />
-    <ProjectReference Include="..\TCPServer\TCPServerLibrary.csproj" />
   </ItemGroup>
 
 </Project>
