--- a/ClientLogic/ClientLogic.csproj
+++ b/ClientLogic/ClientLogic.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="InputSimulatorCore" Version="1.0.5" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\TCPClientLibrary\TCPClientLibrary.csproj" />
   </ItemGroup>
 
